--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,19 @@
         <action android:name="android.service.quicksettings.action.QS_TILE"/>
       </intent-filter>
     </service>
+
+    <service
+        android:name=".service.ToggleShowTapsService"
+        android:enabled="true"
+        android:exported="true"
+        android:icon="@drawable/ic_toggle_usb_debugging"
+        android:label="@string/label_toggle_show_touches"
+        android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+      <intent-filter>
+        <action android:name="android.service.quicksettings.action.QS_TILE"/>
+      </intent-filter>
+    </service>
+
   </application>
 
 </manifest>
