--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "xyz.mustafaali.devtiles"
+        applicationId "xyz.mustafaali.devqstiles"
         minSdkVersion 24
 
         // Writing show taps setting fails on higher versions
         targetSdkVersion 22
 
-        versionCode 3
-        versionName "0.0.3"
+        versionCode 2
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
