--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="xyz.mustafaali.devtiles">
+    package="xyz.mustafaali.devqstiles">
 
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.DUMP" />
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="xyz.mustafaali.devqstiles.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,7 @@
         </activity>
 
         <service
-            android:name=".service.ToggleUsbDebuggingService"
+            android:name="xyz.mustafaali.devqstiles.service.ToggleUsbDebuggingService"
             android:enabled="true"
             android:exported="true"
             android:icon="@drawable/ic_toggle_usb_debugging"
@@ -32,7 +32,7 @@
         </service>
 
         <service
-            android:name=".service.ToggleKeepScreenOnService"
+            android:name="xyz.mustafaali.devqstiles.service.ToggleKeepScreenOnService"
             android:enabled="true"
             android:exported="true"
             android:icon="@drawable/ic_toggle_keep_screen_on"
@@ -44,7 +44,7 @@
         </service>
 
         <service
-            android:name=".service.ToggleShowTapsService"
+            android:name="xyz.mustafaali.devqstiles.service.ToggleShowTapsService"
             android:enabled="true"
             android:exported="true"
             android:icon="@drawable/ic_toggle_show_taps"
@@ -56,7 +56,7 @@
         </service>
 
         <service
-            android:name=".service.ToggleDemoModeService"
+            android:name="xyz.mustafaali.devqstiles.service.ToggleDemoModeService"
             android:enabled="true"
             android:exported="true"
             android:icon="@drawable/ic_toggle_demo_mode"
