--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,18 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
+
+        <service
+            android:name="xyz.mustafaali.devqstiles.service.ToggleAnimatorDurationService"
+            android:enabled="true"
+            android:exported="true"
+            android:icon="@drawable/ic_animator_duration"
+            android:label="@string/label_toggle_animator_duration_scale"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
