--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,18 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
+
+        <service
+            android:name="xyz.mustafaali.devqstiles.service.ToggleGpuOverdrawService"
+            android:enabled="true"
+            android:exported="true"
+            android:icon="@drawable/ic_toggle_gpu_overdraw"
+            android:label="@string/label_toggle_debug_gpu_overdraw"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
