--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,15 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.1.2-5'
-        support_lib_version = '25.3.1'
+        kotlin_version = '1.1.4-2'
+        support_lib_version = '26.0.2'
     }
     repositories {
-        maven { url 'https://maven.google.com' }
-        mavenCentral()
+        jcenter()
+        google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:2.3.3"
+        classpath 'com.android.tools.build:gradle:3.0.0-beta5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
