--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,17 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.1.2-5'
-        support_lib_version = '25.3.1'
+        kotlin_version = '1.1.4-2'
+        support_lib_version = '26.1.0'
     }
     repositories {
-        maven { url 'https://maven.google.com' }
-        mavenCentral()
+        jcenter()
+        google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:2.3.3"
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:oss-licenses:0.9.0'
     }
 }
 
