--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.1.4-2'
+        kotlin_version = '1.1.4-3'
         support_lib_version = '26.1.0'
     }
     repositories {
@@ -10,9 +10,9 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:oss-licenses:0.9.0'
+        classpath 'com.google.gms:oss-licenses:0.9.1'
     }
 }
 
