--- a/analysis/code-style.gradle
+++ b/analysis/code-style.gradle
@@ -17,10 +17,7 @@ task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     main = "com.github.shyiko.ktlint.Main"
     classpath = configurations.ktlint
-    args "src/**/*.kt"
-    // to generate report in checkstyle format prepend following args:
-    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
-    // see https://github.com/shyiko/ktlint#usage for more
+    args "src/**/*.kt", "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/analysis/ktlint.xml"
 }
 check.dependsOn ktlint
 
