--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,6 @@ jobs:
       - image: circleci/android:api-26-alpha
     environment:
       JVM_OPTS: -Xmx3200m
-    general:
-      artifacts:
-        - "app/build/analysis"
     steps:
       - checkout
       - restore_cache:
@@ -29,5 +26,11 @@ jobs:
       - store_artifacts:
           path: app/build/reports
           destination: reports
+      - store_artifacts:
+          path: app/build/analysis
+          destination: analysis
+      - store_artifacts:
+          path: app/build/outputs/apk
+          destination: apks
       - store_test_results:
           path: app/build/test-results
