--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,19 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Check code style
+          command: ./gradlew ktlint
+      - run:
           name: Compile & Run Tests
           command: ./gradlew assemble test
       - store_artifacts:
           path: app/build/reports
           destination: reports
+      - store_artifacts:
+          path: app/build/analysis
+          destination: analysis
+      - store_artifacts:
+          path: app/build/outputs/apk
+          destination: apks
       - store_test_results:
           path: app/build/test-results
